--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center" style="background-image: url('Images/banner3.jpg');background-size: cover;">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p><b>Use the interactive charts below to explore the dataset</b></p>
+        <h1  style="font-family: Garamond, Courier New, monospace;">Belly Button Biodiversity Dashboard</h1>
+        <p class="text-success" style="font-family: 'Courier New', Courier, monospace;"><b>Use the interactive charts below to explore the dataset</b></p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
-          <h5 class="text-info" style="font-family: Garamond, Courier New, monospace;">Test Subject ID No.:</h5>
+          <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
