--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center" style="background-image: url('Images/banner3.jpg');background-size: cover;">
-        <h1  style="font-family: Garamond, Courier New, monospace;">Belly Button Biodiversity Dashboard</h1>
-        <p class="text-success" style="font-family: 'Courier New', Courier, monospace;"><b>Use the interactive charts below to explore the dataset</b></p>
+        <h1>Belly Button Biodiversity Dashboard</h1>
+        <p class="text-danger" style="font-family:Georgia, 'Times New Roman', Times, serif;"><b>Use the interactive charts below to explore the dataset</b></p>
       </div>
     </div>
     <div class="row">
